<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lejeune.david.ardovlamdocumentlibrary.LoginActivity">

    <EditText
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtFirstName"
        android:layout_alignBaseline="@+id/lblFirstName"
        android:layout_alignBottom="@+id/lblFirstName"
        android:layout_toRightOf="@+id/lblFirstName"
        android:layout_width="175dp" />

    <CheckBox
        android:text="@string/chkbox_show_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPassword"
        android:layout_alignLeft="@+id/txtPassword"
        android:layout_alignStart="@+id/txtPassword"
        android:layout_marginTop="11dp"
        android:id="@+id/checkBoxPassword"
        android:textColor="@android:color/darker_gray"
        android:onClick="onCheckboxClicked" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/login_button"
        android:layout_marginTop="31dp"
        android:id="@+id/imgLogin"
        android:layout_below="@+id/checkBoxPassword"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:contentDescription="" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/avatar_1"
        android:id="@+id/imgProfileLogin"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="" />

    <TextView
        android:text="@string/lbl_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="30dp"
        android:id="@+id/lblFirstName"
        android:layout_below="@+id/imgProfileLogin"
        android:layout_toLeftOf="@+id/imgProfileLogin"
        android:layout_toStartOf="@+id/imgProfileLogin" />

    <TextView
        android:text="@string/lbl_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblLastName"
        android:layout_alignBaseline="@+id/txtLastName"
        android:layout_alignBottom="@+id/txtLastName"
        android:layout_alignRight="@+id/lblFirstName"
        android:layout_alignEnd="@+id/lblFirstName" />

    <EditText
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtPassword"
        android:layout_width="175dp"
        android:layout_below="@+id/txtLastName"
        android:layout_alignLeft="@+id/txtLastName"
        android:layout_alignStart="@+id/txtLastName" />

    <TextView
        android:text="@string/lbl_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblPassword"
        android:layout_alignBaseline="@+id/txtPassword"
        android:layout_alignBottom="@+id/txtPassword"
        android:layout_alignRight="@+id/lblLastName"
        android:layout_alignEnd="@+id/lblLastName" />

    <EditText
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/txtLastName"
        android:layout_width="175dp"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/txtFirstName"
        android:layout_alignLeft="@+id/txtFirstName"
        android:layout_alignStart="@+id/txtFirstName" />

</RelativeLayout>
